--- a/chittorgarh.html
+++ b/chittorgarh.html
@@ -9,6 +9,9 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/popper.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
   <style>
 
@@ -37,6 +40,29 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
         </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Cities
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Jaipur</a>
+            <a class="dropdown-item" href="#">Jaisalmer</a>
+            <a class="dropdown-item" href="#">Ajmer</a>
+            <a class="dropdown-item" href="#">Bikaner</a>
+            <a class="dropdown-item" href="#">Kota</a>
+            <a class="dropdown-item" href="#">Bhilwara</a>
+            <a class="dropdown-item" href="#">Churu</a>
+            <a class="dropdown-item" href="#">Jhunjhunu</a>
+          </div>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
+        
+
+
       </ul>
     </div>
   </nav>
@@ -166,71 +192,112 @@
 
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc1.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc2.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc3.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc4.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-    </div>
-
-    <h3 class="mt-3">Rani Padmini Palace / Padmini Mahal</h3>
-    <p class="text-justify">
-      Padmini Palace was once the palatial abode of the exquisitely beautiful Rajput queen, Rani Padmini, the wife of King Rawal Ratan Singh. Revered as an epitome of beauty, Rani Padmini was the daughter of a Sinhala ruler Gandharvasen and plays a crucial role in the history of the gallant Rajput warriors. This queen was mentioned in the epic poem of 'Padmavati', which had been composed during 1540 CE, by Malik Muhammad Jayasi.
-
-      Rani Padmini Palace leaves behind the tincture of beauty, valour, sacrifice, honour, and tragedy of the past. Padmini Palace was the very legendary palace from where Ala-ud-din Khilji was permitted to obtain a glimpse of Padmini in a mirror placed in the main hall. Allured by her beauty, Ala-ud-din Khilji fought a fierce battle with Rana Ratan Singh, husband of Rani Padmini. Rani Padmini was augmented by her preference of death to abduction and dishonour during the historic siege of Chittor in 1303 AD, by Ala-ud-din Khilji. As an aftermath, Ala-ud-din Khilji killed thirty thousand Hindus in revenge and entrusted the fort to his son Khizr Khan.
-    </p>
-
-    <div class="row">
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc5.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc6.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc7.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-
-      <div class="col-xl-3 col-md-6 mt-0">
-        <img src="pc8.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-      </div>
-    </div>
-
-
-
-    <h3 class="mt-3"> Kalika Mata Temple </h3>
-    <p class="text-justify">
-     Built originally in the 8th century, this serene temple was dedicated to the worship of the sun god before it was converted into a shrine for Kalika, an incarnation of Goddess Durga, in the 14th century. This temple is one of the most important pilgrimage attractions in Chittorgarh, and should not be missed when touring the grounds of the Chittorgarh fort and and is one of the best places to visit in Chittorgarh.
-
-     The architecture of the temple reflects the devotion of its builders- a lot of hard work has been put into the intricate carvings and embellishments that adorn the ancient walls of the temple. Even though it is partially in ruins now, the beauty of the temple still shines through.
-   </p>
-
-   <div class="row">
-    <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc9.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
+       <a data-fancybox="gallery" href="pc1.jpg">
+        <img src="pc1.jpg" class="img-fluid custom-image mt-20-px">
+      </a>
     </div>
 
     <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc10.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-    </div>
-    <div class="col-xl-3 col-md-6 mt-0">
-      <img src="pc11.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-    </div>
-
-    <div class="col-xl-3 col-md-6 mt-0 mb-3">
-      <img src="pc12.jpg" alt="chittorgarh" class="img-fluid custom-image mt-20-px">
-    </div>
+     <a data-fancybox="gallery" href="pc2.jpg">
+      <img src="pc2.jpg" class="img-fluid custom-image mt-20-px">
+    </a>
   </div>
+  <div class="col-xl-3 col-md-6 mt-0">
+   <a data-fancybox="gallery" href="pc3.jpg">
+    <img src="pc3.jpg" class="img-fluid custom-image mt-20-px">
+  </a>
+</div>
+
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc4.jpg">
+  <img src="pc4.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+</div>
+
+<h3 class="mt-3">Rani Padmini Palace / Padmini Mahal</h3>
+<p class="text-justify">
+  Padmini Palace was once the palatial abode of the exquisitely beautiful Rajput queen, Rani Padmini, the wife of King Rawal Ratan Singh. Revered as an epitome of beauty, Rani Padmini was the daughter of a Sinhala ruler Gandharvasen and plays a crucial role in the history of the gallant Rajput warriors. This queen was mentioned in the epic poem of 'Padmavati', which had been composed during 1540 CE, by Malik Muhammad Jayasi.
+
+  Rani Padmini Palace leaves behind the tincture of beauty, valour, sacrifice, honour, and tragedy of the past. Padmini Palace was the very legendary palace from where Ala-ud-din Khilji was permitted to obtain a glimpse of Padmini in a mirror placed in the main hall. Allured by her beauty, Ala-ud-din Khilji fought a fierce battle with Rana Ratan Singh, husband of Rani Padmini. Rani Padmini was augmented by her preference of death to abduction and dishonour during the historic siege of Chittor in 1303 AD, by Ala-ud-din Khilji. As an aftermath, Ala-ud-din Khilji killed thirty thousand Hindus in revenge and entrusted the fort to his son Khizr Khan.
+</p>
+
+<div class="row">
+  <div class="col-xl-3 col-md-6 mt-0">
+   <a data-fancybox="gallery" href="pc5.jpg">
+    <img src="pc5.jpg" class="img-fluid custom-image mt-20-px">
+  </a>
+</div>
+
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc6.jpg">
+  <img src="pc6.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc7.jpg">
+  <img src="pc7.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc8.jpg">
+  <img src="pc8.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+</div>
+
+
+
+<h3 class="mt-3"> Kalika Mata Temple </h3>
+<p class="text-justify">
+ Built originally in the 8th century, this serene temple was dedicated to the worship of the sun god before it was converted into a shrine for Kalika, an incarnation of Goddess Durga, in the 14th century. This temple is one of the most important pilgrimage attractions in Chittorgarh, and should not be missed when touring the grounds of the Chittorgarh fort and and is one of the best places to visit in Chittorgarh.
+
+ The architecture of the temple reflects the devotion of its builders- a lot of hard work has been put into the intricate carvings and embellishments that adorn the ancient walls of the temple. Even though it is partially in ruins now, the beauty of the temple still shines through.
+</p>
+
+<div class="row">
+  <div class="col-xl-3 col-md-6 mt-0">
+   <a data-fancybox="gallery" href="pc9.jpg">
+    <img src="pc9.jpg" class="img-fluid custom-image mt-20-px">
+  </a>
+</div>
+
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc10.jpg">
+  <img src="pc10.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+<div class="col-xl-3 col-md-6 mt-0">
+ <a data-fancybox="gallery" href="pc11.jpg">
+  <img src="pc11.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+
+<div class="col-xl-3 col-md-6 mt-0 mb-3">
+ <a data-fancybox="gallery" href="pc12.jpg">
+  <img src="pc12.jpg" class="img-fluid custom-image mt-20-px">
+</a>
+</div>
+</div>
 
 </div>
+
+<script type="text/javascript">
+ $('[data-fancybox="gallery"]').fancybox({
+
+  buttons: [
+  "zoom",
+  "share",
+  "slideShow",
+  "fullScreen",
+  "download",
+  "thumbs",
+  "close"
+  ],
+  animationEffect: "zoom-in-out",
+  // Options will go here
+});
+</script>
 </body>
 </html>
