--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -9,8 +9,10 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/popper.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
   
   <style>
 
@@ -45,6 +47,30 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
         </li>
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Cities
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Jaipur</a>
+            <a class="dropdown-item" href="#">Jaisalmer</a>
+            <a class="dropdown-item" href="#">Ajmer</a>
+            <a class="dropdown-item" href="#">Bikaner</a>
+            <a class="dropdown-item" href="#">Kota</a>
+            <a class="dropdown-item" href="#">Bhilwara</a>
+            <a class="dropdown-item" href="#">Churu</a>
+            <a class="dropdown-item" href="#">Jhunjhunu</a>
+          </div>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
+        
+
+        
       </ul>
     </div>
   </nav>
@@ -162,18 +188,26 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="safari.jpg">
+          <img src="safari.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="safari1.jpg">
+          <img src="safari1.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="safari2.jpg">
+          <img src="safari2.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="safari3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="safari3.jpg">
+          <img src="safari3.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
     </div>
     <h3 class="mt-3"> Trekking</h3>
@@ -182,18 +216,26 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="T1.jpg">
+          <img src="T1.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="T2.jpg">
+          <img src="T2.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
       <div class="col-xl-3 col-md-6  mt-0">
-        <img src="T3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="T3.jpg">
+          <img src="T3.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="T4.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="T4.jpg">
+          <img src="T4.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
     </div>
 
@@ -203,20 +245,45 @@
     </p>
     <div class="row">
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="s1.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="s1.jpg">
+          <img src="s1.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0">
-        <img src="s2.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="s2.jpg">
+          <img src="s2.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
       <div class="col-xl-3 col-md-6  mt-0">
-        <img src="s3.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
+        <a data-fancybox="gallery" href="s3.jpg">
+          <img src="s3.jpg" class="img-fluid custom-image mt-20-px">
+        </a>
       </div>
 
       <div class="col-xl-3 col-md-6 mt-0 mb-3">
-        <img src="s4.jpg" alt="khumbhalgarh" class="img-fluid custom-image mt-20-px">
-      </div>
+       <a data-fancybox="gallery" href="s4.jpg">
+        <img src="s4.jpg" class="img-fluid custom-image mt-20-px">
+      </a>
     </div>
   </div>
+</div>
+
+<script type="text/javascript">
+ $('[data-fancybox="gallery"]').fancybox({
+
+  buttons: [
+  "zoom",
+  "share",
+  "slideShow",
+  "fullScreen",
+  "download",
+  "thumbs",
+  "close"
+  ],
+  animationEffect: "zoom-in-out",
+  // Options will go here
+});
+</script>
 </body>
 </html>
