--- a/place.html
+++ b/place.html
@@ -27,6 +27,27 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">About Us</a>
         </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Cities
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Jaipur</a>
+            <a class="dropdown-item" href="#">Jaisalmer</a>
+            <a class="dropdown-item" href="#">Ajmer</a>
+            <a class="dropdown-item" href="#">Bikaner</a>
+            <a class="dropdown-item" href="#">Kota</a>
+            <a class="dropdown-item" href="#">Bhilwara</a>
+            <a class="dropdown-item" href="#">Churu</a>
+            <a class="dropdown-item" href="#">Jhunjhunu</a>
+          </div>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
+        
       </ul>
     </div>
   </nav>
