--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -31,6 +31,11 @@
   .con{
     margin-top: 80px;
   }
+      @media (max-width: 767px) {
+        .hidden-mobile {
+          display:block;
+        }
+  
 </style>
 </head>
 <body>
@@ -70,7 +75,7 @@
         </li>
         
 
-        
+
       </ul>
     </div>
   </nav>
@@ -123,7 +128,7 @@
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
             <div class="col-lg-5">
-              <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+              <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img hidden-mobile">
             </div>
             <div class="col-lg-7">
               <div class="card-body">
@@ -137,7 +142,7 @@
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
             <div class="col-lg-5">
-              <img src="j2.jpg" alt="Udaipur" class="img-fluid hight-card-img">
+              <img src="j2.jpg" alt="Udaipur" class="img-fluid hight-card-img hidden-mobile">
             </div>
             <div class="col-lg-7">
               <div class="card-body">
