--- a/jodhpur.html
+++ b/jodhpur.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Udaipur</title>
+  <title>Jodhpur</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -118,10 +118,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Chittorgarh Fort</h4>
                 <h6>Rajasthan</h6>
@@ -132,10 +132,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Udaipur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -146,10 +146,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4> Jodhpur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -160,10 +160,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Kumbhalgarh Fort</h4>
                 <h6>Rajasthan</h6>
