--- a/khumbhalgarh.html
+++ b/khumbhalgarh.html
@@ -31,10 +31,6 @@
   .con{
     margin-top: 80px;
   }
-      @media (max-width: 767px) {
-        .hidden-mobile {
-          display:block;
-        }
   
 </style>
 </head>
@@ -127,10 +123,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img hidden-mobile">
+            <div class="col-lg-5 col-md-5">
+              <img src="khumbhalgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Chittorgarh Fort</h4>
                 <h6>Rajasthan</h6>
@@ -141,10 +137,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="j2.jpg" alt="Udaipur" class="img-fluid hight-card-img hidden-mobile">
+            <div class="col-lg-5 col-md-5">
+              <img src="j2.jpg" alt="Udaipur" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Udaipur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -155,10 +151,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4> Jodhpur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -169,10 +165,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Kumbhalgarh Fort</h4>
                 <h6>Rajasthan</h6>
