--- a/udaipur.html
+++ b/udaipur.html
@@ -122,10 +122,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="Chittorgarh.jpg" alt="Chittorgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Chittorgarh Fort</h4>
                 <h6>Rajasthan</h6>
@@ -136,10 +136,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u1.jpg" alt="Udaipur" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u1.jpg" alt="Udaipur" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Udaipur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -150,10 +150,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4> Jodhpur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -164,10 +164,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Kumbhalgarh Fort</h4>
                 <h6>Rajasthan</h6>
