--- a/chittorgarh.html
+++ b/chittorgarh.html
@@ -123,10 +123,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="Chittorgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="Chittorgarh.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Chittorgarh Fort</h4>
                 <h6>Rajasthan</h6>
@@ -137,10 +137,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="jodhpur.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="jodhpur.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Udaipur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -151,10 +151,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="j3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4> Jodhpur Fort</h4>
                 <h6>Rajasthan</h6>
@@ -165,10 +165,10 @@
 
         <div class="card rounded-0 shadow mb-3">
           <div class="row no-gutters">
-            <div class="col-lg-5">
-              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img">
+            <div class="col-lg-5 col-md-5">
+              <img src="u3.jpg" alt="khumbhalgarh" class="img-fluid hight-card-img w-100">
             </div>
-            <div class="col-lg-7">
+            <div class="col-lg-7 col-md-7">
               <div class="card-body">
                 <h4>Kumbhalgarh Fort</h4>
                 <h6>Rajasthan</h6>
