--- a/chittorgarh.html
+++ b/chittorgarh.html
@@ -208,13 +208,13 @@
   </a>
 </div>
 
-<div class="col-xl-3 col-md-6 mt-0">
+<div class="col-xl-3 col-md-6 mt-0 mb-2">
  <a data-fancybox="gallery" href="pc4.jpg">
   <img src="pc4.jpg" class="img-fluid custom-image mt-20-px">
 </a>
 </div>
 </div>
-
+<hr style="padding: 5px;">
 <h3 class="mt-3">Rani Padmini Palace / Padmini Mahal</h3>
 <p class="text-justify">
   Padmini Palace was once the palatial abode of the exquisitely beautiful Rajput queen, Rani Padmini, the wife of King Rawal Ratan Singh. Revered as an epitome of beauty, Rani Padmini was the daughter of a Sinhala ruler Gandharvasen and plays a crucial role in the history of the gallant Rajput warriors. This queen was mentioned in the epic poem of 'Padmavati', which had been composed during 1540 CE, by Malik Muhammad Jayasi.
@@ -240,14 +240,14 @@
 </a>
 </div>
 
-<div class="col-xl-3 col-md-6 mt-0">
+<div class="col-xl-3 col-md-6 mt-0 mb-2">
  <a data-fancybox="gallery" href="pc8.jpg">
   <img src="pc8.jpg" class="img-fluid custom-image mt-20-px">
 </a>
 </div>
 </div>
 
-
+<hr style="padding: 5px;">
 
 <h3 class="mt-3"> Kalika Mata Temple </h3>
 <p class="text-justify">
