--- a/udaipur.html
+++ b/udaipur.html
@@ -185,7 +185,7 @@
   <div class="container">
     <h4 class="mt-3 mb-3">Places to Visits in Udaipur</h4>
     <h3 class="mt-2">Lakes</h3>
-    <p>
+    <p class="text-justify">
       Udaipur has the stunning architecture which reminds you royal Rajputana tradition. It is located near the Gujarat border so the Guajarati language is also spoken there along with Mewari. The city is also known as “city of lakes” because all of its natural lakes
       It has seven lakes surrounding the city. Five of the major lakes, namely, Fateh Sagar Lake, Lake Pichola, Swaroop Sagar Lake, Rangsagar and Doodh Talai Lake have been included under the restoration project of the National Lake Conservation Plan (NLCP) of the Government of India.
     </p>
@@ -234,15 +234,17 @@
 </a>
 </div>
 
-<div class="col-xl-3 col-md-6 mt-0">
+<div class="col-xl-3 col-md-6 mt-0 mb-2">
  <a data-fancybox="gallery" href="pu8.jpg">
   <img src="pu8.jpg" class="img-fluid custom-image mt-20-px">
 </a>
 </div>
 </div>
 
+<hr style="padding: 10px;">
+
 <h3 class="mt-3"> Vintage Car Museum</h3>
-<p>
+<p class="text-justify">
   A museum of vintage vehicles – is a must. Housed in the former Mewar State Motor Garage, the museum displays luxury vintage wheels like the 1934 Rolls-Royce Phantom II that was later converted into a pick-up truck used during royal hunts, another 1934 Rolls-Royce that was converted to transport the entire Mewar royal cricket team. You can also see Cadillacs, several Mercedes-Benzs, Buicks, a Ford Model A and many others. A high point of the museum is the royal Shell Petrol Pump that still works! here you can check all museums in Udaipur.
 </p>
 
@@ -265,15 +267,15 @@
 </a>
 </div>
 
-<div class="col-xl-3 col-md-6 mt-0">
+<div class="col-xl-3 col-md-6 mt-0 mb-2">
  <a data-fancybox="gallery" href="pu12.jpg">
   <img src="pu12.jpg" class="img-fluid custom-image mt-20-px">
 </a>
 </div>
 </div>
-
+<hr style="padding: 10px;">
 <h3 class="mt-3"> Maharana Pratap Memorial</h3>
-<p>
+<p class="text-justify">
  Right at the top of the Moti Magri, overlooking the Fateh Sagar Lake is a lifelike statue of Udaipur’s most celebrated ruler, Maharana Pratap and his beloved horse Chetak. Visit this imposing memorial to the warrior king and his favorite mount who is believed to have saved his master’s life in the epic battle of Haldighati. A Japanese rock garden and the remnants of an old fort in Udaipur lie nearby and make for an interesting vignette.
 </p>
 
@@ -281,8 +283,8 @@
   <div class="col-xl-3 col-md-6 mt-0">
    <a data-fancybox="gallery" href="pu13.jpg">
     <img src="pu13.jpg" class="img-fluid custom-image mt-20-px">
-   </a>
-  </div>
+  </a>
+</div>
 
 <div class="col-xl-3 col-md-6 mt-0">
   <a data-fancybox="gallery" href="pu14.jpg">
@@ -296,15 +298,15 @@
 </a>
 </div>
 
-<div class="col-xl-3 col-md-6 mt-0">
+<div class="col-xl-3 col-md-6 mt-0 mb-2">
  <a data-fancybox="gallery" href="pu16.jpg">
   <img src="pu16.jpg" class="img-fluid custom-image mt-20-px">
 </a>
 </div>
 </div>
-
+<hr style="padding: 10px;">
 <h3 class="mt-3"> Saheliyon Ki Bari</h3>
-<p>
+<p class="text-justify">
   Saheliyon Ki Bari or the Garden of the Maidens was built by Maharana Sangram Singh in the early years of the 18th century. This awe-inspiring development catered to the maids who would go with the Princess of Udaipur to her husband’s hearth (part of the dowry given by the Maharana). This place had pretty women dancing, singing and making merry and the beautiful marble elephants, fountains, a lotus pool and kiosks bear ample testimony to the richness of the time.
 
   <div class="row">
